Ok, I've started a changelog!
v 3.5 - * Fixed a bug in DoExit where "X is closed." wasn't printing properly
	* "kick" now points to a DoKick routine (which directs to DoHit by default)
	* Added "smash" to DoHit
v 3.4 - * Updated DescribePlace so it can be called without arguments
	* Found another USE_PLURAL_OBJECTS DescribePlace bug in the NEW_DESC stuff
	* Updated SpecialDesc, WhatsIn, DoTakeOff
	* Checkheld versions of DoWear and DoTakeOff
	* Updated FindObject, ExcludeFromAll, VerbHeldMode, SpeakTo, CheckReach
	* DoLookIn no longer requires container grammar (now works with non-container, transparent objects)
v 3.3 - * Fixed a bug where the 'bottom justification' code in WriteStatus was causing [MORE] prompts in Gargoyle
	* added display.needs_repaint-clearing code to InitScreen
	* PrintStatusLine always does Infocom-style statuslines (a space to the left and right) to force compatibility with DOS terps
	* Tweaked some MovePlayer stuff
	* MovePlayer no longer calls PrintStatusLine since I figure it'll be called by main at the end of the turn. Might changes this back if it causes a lot of problems.
	* Added a NO_FANCY_STUFF switch which forces older-style PrintStatusLine's and turns off some other fancy stuff. Really, I added this while trying to troubleshoot something where Roodylib code ended up not being the culprit, so I'm not sure if I can recommend it or if it'll stay in.
v 3.2 - * added a missing printed bracket in parser monitoring code
	* added NEW_EMPTY system for more container/platform-emptying options
	* added AMERICAN_ENGLISH flag to switch between quotation punctuation styles
	* added NEW_DESCRIBEPLACE to give more DescribePlace options
	* added WhatsIn replacement and ListObjects RLibMessage-call for more printing options
	* updated CenterTitle to not draw extra window in simple, non-Glk terps
	* Fixed some places in the supercontainer class that didn't work right with transparent supercontainers.